--- a/TODO
+++ b/TODO
@@ -16,6 +16,8 @@ Docker best practices: https://www.docker.com/blog/intro-guide-to-dockerfile-bes
 
 wp-config file tutorial: https://kinsta.com/blog/wp-config-php/
 
+WP beginners guide: https://www.wpbeginner.com/beginners-guide/beginners-guide-to-wordpress-file-and-directory-structure/
+
 Shell tutorial: http://trajano.us.es/~fjfj/shell/shellscript.htm
 
 Alpine wiki mariadb: https://wiki.alpinelinux.org/wiki/MariaDB
