--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ ACTUAL STATE:
 
 - FTP permits directory not working. We have to use a script
 - Everytime we start up wordpress, it will acumulate info in wp-config.php for redis plugin
+- Need space to build static web in VM
 
 
 
