--- a/TODO
+++ b/TODO
@@ -2,7 +2,9 @@ ACTUAL STATE:
 
 - FTP permits directory not working. We have to use a script
 - Everytime we start up wordpress, it will acumulate info in wp-config.php for redis plugin
-- Need space to build static web in VM
+- Need to configure Nginx right
+- Redis cache has no writeable right if we change user permits for wordpress directory
+- Redis cache plugin is always downloaded in wordpress container
 
 
 
@@ -23,8 +25,6 @@ Shell tutorial: http://trajano.us.es/~fjfj/shell/shellscript.htm
 
 Alpine wiki mariadb: https://wiki.alpinelinux.org/wiki/MariaDB
 
-Alpine wiki Wordpress: https://wiki.alpinelinux.org/wiki/WordPress
-
 FTP LINKS:
 
 https://www.redeszone.net/tutoriales/servidores/vsftpd-configuracion-servidor-ftp/
@@ -36,3 +36,5 @@ install
 https://www.hiroom2.com/2017/08/22/alpinelinux-3-6-vsftpd-en/
 
 https://github.com/delfer/docker-alpine-ftp-server/blob/master/Dockerfile
+
+https://askubuntu.com/questions/239239/error-message-500-oops-vsftpd-refusing-to-run-with-writable-root-inside-chroo
