--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 ACTUAL STATE:
 
-- Need to configure Nginx right
+- Static web imgs have to be in google drive or something. Also, index.html has to be
+	changed in order to work
 
 
 Knowledge:
