--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ ACTUAL STATE:
 
 - Static web imgs have to be in google drive or something. Also, index.html has to be
 	changed in order to work
-
+- Do something for portainer
 
 Knowledge:
 CMD - The CMD describes the default container parameters or commands. The user can easily override the default command when you use this.
