TODO final update

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 ACTUAL STATE:
 
-- Static web imgs have to be in google drive or something. Also, index.html has to be
-	changed in order to work
-- Do something for portainer
+- Done & ready to be checked by my 42 partners!
+
 
 Knowledge:
 CMD - The CMD describes the default container parameters or commands. The user can easily override the default command when you use this.
