--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 ACTUAL STATE:
 
-- Done & ready to be checked by my 42 partners!
+- Change Volumes conf
+- Change Website Volume so everynew is different
 
 
 Knowledge:
