--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 ACTUAL STATE:
 
-- Change Volumes conf
-- Change Website Volume so everynew is different
-
+- Improve website
 
 Knowledge:
 CMD - The CMD describes the default container parameters or commands. The user can easily override the default command when you use this.
